--- a/css/styles.css
+++ b/css/styles.css
@@ -22,12 +22,12 @@ body {
 }
 
 .masthead {
-    background: #2e3d49;
+    background: #FFC107;
     padding: 2em 0;
 }
 
 .masthead h1 {
-    color: #ffffff;
+    color: #211901;
     font-weight: normal;
     margin: 0;
     margin-bottom: 0.2em;
@@ -49,7 +49,7 @@ body {
 }
 
 #submit-btn {
-    background-color: #15c26b;
+    background-color: #3D4FFF;
     border: none;
     border-radius: 4px;
     color: #ffffff;
@@ -98,7 +98,7 @@ ul {
     padding: 0;
 }
 
-.article {
+.articleClass {
     background: url('../images/icon-article.png'), #ffffff;
     background-position: 1.5em 1.2em;
     background-repeat: no-repeat;
@@ -109,26 +109,26 @@ ul {
     padding: 1em 2em 1em 4.8em;
 }
 
-.article:hover {
+.articleClass:hover {
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
 }
 
-.article h2 {
+.articleClass h2 {
     font-size: 18px;
     font-weight: 600;
     margin: 0;
 }
 
-.article h2 a {
+.articleClass h2 a {
     color: #02b3e4;
     text-decoration: none;
 }
 
-.article h2 a:hover {
+.articleClass h2 a:hover {
     text-decoration: underline;
 }
 
-.article p {
+.articleClass p {
     font-size: 0.9em;
     line-height: 1.4;
 }
